# P10-Creez-une-API-securisee-RESTful-en-utilisant-Django-REST

./: README.md  pyproject.toml
